@@ -49,6 +49,14 @@
             <name>Chris Tucker</name>
             <email>ct447@cornell.edu</email>
         </developer>
+        <developer>
+            <name>Heather Sweeney</name>
+            <email>hms243@cornell.edu</email>
+        </developer>
+        <developer>
+            <name>David Phillips</name>
+            <email>drp227@cornell.edu</email>
+        </developer>
     </developers>
 
     <properties>
@@ -59,9 +67,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <exec.mainClass>org.breedinginsight.api.Application</exec.mainClass>
-        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version> <!-- 2.22.2 -->
-        <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
-        <jvm.options>--enable-preview</jvm.options>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version> <!-- 2.22.2 -->
+        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
+        <jvm.options>-Xmx1024m -XX:MaxPermSize=256m --enable-preview</jvm.options>
 
         <jooq.version>3.16.3</jooq.version>
         <postgres.version>42.3.2</postgres.version>
@@ -77,7 +85,7 @@
         <guava.version>31.0.1-jre</guava.version>
         <okhttp.version>4.9.3</okhttp.version>
         <mockito.version>4.3.1</mockito.version>
-        <brapi-java-client.version>2.0.2</brapi-java-client.version>
+        <brapi-java-client.version>2.1-SNAPSHOT</brapi-java-client.version>
         <commons-io.version>2.11.0</commons-io.version>
         <tika-app.version>2.2.1</tika-app.version>
         <!-- Version of apache-poi depends on version of tika. Tika uses these. -->
@@ -282,6 +290,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.micronaut.test</groupId>
             <artifactId>micronaut-test-junit5</artifactId>
             <scope>test</scope>
@@ -318,6 +331,24 @@
             <artifactId>testcontainers</artifactId>
             <version>${testcontainers.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>localstack</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <version>1.12.342</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.kowalski</groupId>
@@ -394,6 +425,21 @@
             <groupId>io.github.kostaskougios</groupId>
             <artifactId>cloning</artifactId>
             <version>${cloning.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-micronaut-20</artifactId>
+            <version>3.17.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micronaut.aws</groupId>
+            <artifactId>micronaut-aws-sdk-v2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.agorapulse</groupId>
+            <artifactId>micronaut-amazon-awssdk-s3</artifactId>
+            <version>2.0.5-micronaut-2.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -571,21 +617,21 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.junit.platform</groupId>
-                            <artifactId>junit-platform-surefire-provider</artifactId>
-                            <version>1.1.0</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.junit.jupiter</groupId>
-                            <artifactId>junit-jupiter-engine</artifactId>
-                            <version>5.7.0</version>
-                        </dependency>
-                    </dependencies>
+<!--                    <dependencies>-->
+<!--                        <dependency>-->
+<!--                            <groupId>org.junit.platform</groupId>-->
+<!--                            <artifactId>junit-platform-surefire-provider</artifactId>-->
+<!--                            <version>1.3.2</version>-->
+<!--                        </dependency>-->
+<!--                        <dependency>-->
+<!--                            <groupId>org.junit.jupiter</groupId>-->
+<!--                            <artifactId>junit-jupiter-engine</artifactId>-->
+<!--                            <version>5.9.0</version>-->
+<!--                        </dependency>-->
+<!--                    </dependencies>-->
                     <configuration>
                         <redirectTestOutputToFile>false</redirectTestOutputToFile>
-                            <argLine>${jvm.options}</argLine>
+                        <argLine>${jvm.options}</argLine>
                         <detail>true</detail>
                         <includes>
                             <include>%regex[.*]</include>
@@ -604,7 +650,7 @@
                             <brapi.server.pheno-url>${BRAPI_PHENO_URL}</brapi.server.pheno-url>
                             <brapi.server.geno-url>${BRAPI_GENO_URL}</brapi.server.geno-url>
                             <brapi.server.default-url>${BRAPI_DEFAULT_URL}</brapi.server.default-url>
-                            <brapi.server.reference-source>breeding-insight.org</brapi.server.reference-source>
+                            <brapi.server.reference-source>${BRAPI_REFERENCE_SOURCE}</brapi.server.reference-source>
                             <email.relay-server.host>test</email.relay-server.host>
                             <email.relay-server.port>25</email.relay-server.port>
                             <email.from>test@test.com</email.from>
